--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
     <finalName>integrated-learning-project</finalName>
   
   <plugins>
+  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <outputDirectory>${project.basedir}/</outputDirectory>
+        </configuration>
+      </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
