--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,20 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+    <distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>464e852275d7-releases</name>
+        <url>http://192.168.99.100:8081/artifactory/libs-release-local</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>464e852275d7-snapshots</name>
+        <url>http://192.168.99.100:8081/artifactory/libs-release-local</url>
+    </snapshotRepository>
+</distributionManagement>
+
 	<profiles>
 		<profile>
 			<id>sonar</id>
